[package]
name = "gpss_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25.3", features = ["tokio-comp", "json"] }
redis-macros = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
futures = "0.3"
thiserror = "1.0.58"
anyhow = "1.0.82"
rand = "0.8.5"
